# Interpreter

./: .gitignore  CMakeLists.txt  Lexer.cpp  Lexer.h  Token.cpp  Token.h  main.cpp
UnitTests/: MyTests.h  Tests.h
